[package]
name = "zoomies"
version = "0.1.0"
authors = ["Cameron Dart <cdart2@illinois.edu>"]
license = "MIT"
description = "An asynchronous DogStatsD client."
documentation = "https://github.com/SkamDart/zoomies"
keywords = [ "datadog", "dogstatsd", "client", "async" ]
edition = "2018"

[dependencies]
async-std = { version = "1.6.3" }
chrono = "0.4"
num-integer = "0.1.43"

[[bin]]
name = "example"
path = "src/example.rs"
